--- a/website/lectures/lecture13.qmd
+++ b/website/lectures/lecture13.qmd
@@ -365,6 +365,9 @@ In the code below, we create a data frame containing the team names and then det
 We then join the corresponding probability of the higher-seeded team winning the game.
 Finally, we simulate the outcome of the match and record the winner.
 ```{r}
+#| label: simulate-finals
+#| eval: true
+#| echo: true
 finals <- 
   data.frame(Team1 = sf_winners[1], Team2 = sf_winners[2]) |>
   dplyr::left_join(y = seeds |> dplyr::rename(Team1 = Team, Team1.Seed = Seed), by = "Team1") |>
