--- a/website/slides/raw_slides/slides_11.qmd
+++ b/website/slides/raw_slides/slides_11.qmd
@@ -497,5 +497,47 @@ rsar |>
 
 :::
 
+## Uncertainty Quantification
 
+- Top framers appear to save nearly 30 runs over replacement
+- Translates to about 3 wins
+- Exercise: use the bootstrap to quantify uncertainty
+  - Create several bootstrap re-samples of 2024 taken pitches
+  - Must re-fit the multilevel model and compute GSAR
+  - Use the original replacement-level 
+- Quantifying uncertainty: **critical** to determining monetary value of framing
 
+## My Own Research{.smaller}
+
+- I've studied framing since 2015
+  - Initial paper: Bayesian models to "borrow strength" across umpires
+  - Conclusion: lots of uncertainty in framing effects
+  
+- More recently: use Bayesian Additive Regression Trees (BART) to model $\mathbb{P}(\textrm{strike})$
+  - Faster & more flexible: (2 hours on a desktop vs 50 hours on a cluster)
+  - Better predictions: mis-classification of 7% vs 10%
+  - Similar conclusions: possibly large effect but lots of uncertainty
+  
+## Framing Effectsin 2009
+
+- These are Runs Saved Above League-Average
+
+![](rs_intervals_2009.png)
+
+## Framing Over Time
+
+![](rs_means.png)
+
+## Announcements{.smaller}
+
+- Projects are due tomorrow at noon
+  - If you need an extension, email me
+  - Peer review assignments will be made on Canvas by **Sunday** night
+  - Peer review due on **Sunday** 10/18
+  
+- Next week: new unit on ranking & simulation
+  - Lectures 12 & 13: hockey power rankings & the NCAA D1 National Championship
+  - Lecture 14 & 15: Markov chain simulations
+  - Lecture 16 & 17: Mock drafts & other simulations
+  
+- Project 2 Information will be posted by Sunday evening
