Update figures in lecture11

--- a/website/slides/raw_slides/slides_11.qmd
+++ b/website/slides/raw_slides/slides_11.qmd
@@ -520,13 +520,11 @@ rsar |>
   
 ## Framing Effectsin 2009
 
-- These are Runs Saved Above League-Average
-
-![](rs_intervals_2009.png)
+![](rs_intervals_2009.png){width=80%}
 
 ## Framing Over Time
 
-![](rs_means.png)
+![](rs_means.png){width=80%}
 
 ## Announcements{.smaller}
 
