Add hockey results

--- a/website/lectures/lecture12.qmd
+++ b/website/lectures/lecture12.qmd
@@ -298,7 +298,7 @@ This information is readily scraped using tools like [**rvest**](https://rvest.t
 ## Error
 
 Unfortunately, USCHO changed their website backend and the following code no longer works (as of October 5, 2025).
-The data will be posted as a CSV file on the course website.
+The data will be posted as a CSV file here
 
 :::
 
