Update link in lecture 12

--- a/website/lectures/lecture12.qmd
+++ b/website/lectures/lecture12.qmd
@@ -295,11 +295,10 @@ This information is readily scraped using tools like [**rvest**](https://rvest.t
 
 :::{.callout-important}
 
-## Error
+## Download pre-scraped data
 
-Unfortunately, USCHO changed their website backend and the following code no longer works (as of October 5, 2025).
-The data will be posted as a CSV file here
-
+Unfortunately, USCHO changed their website back-end and the following code no longer works (as of October 5, 2025).
+The data for this lecture is available as a CSV file [here](https://github.com/skdeshpande91/stat479_fall2025/blob/main/data/wd1hockey_2024_2025.csv). 
 :::
 
 
