Add project 3 information

--- a/website/project2.qmd
+++ b/website/project2.qmd
@@ -84,7 +84,7 @@ One could also derive a power ranking of golfers based on their finishing positi
 
 ## Deliverables
 
-The deliverables for Project 2 are the same as for Project 1 and carry the similar requirements.
+The deliverables for Project 2 are the same as for Project 1 and carry similar requirements.
 The main difference is that you must clearly state and motivate the events of interest (i.e., those whose probabilities you are estimating via simulation) in both your written report and presentation.
 
 ### Written Report
