Add slides for lecture 13

--- a/website/project2.qmd
+++ b/website/project2.qmd
@@ -68,7 +68,7 @@ It may even be possible to use a Markov chain model to simulate a cricket inning
 
 If you choose to base your simulation around a Markov chain model, you need to carefully define your state-space, identify any potential absorbing states, and estimate the transition probabilities.
 Depending on the amount of available data, these probabilities may be estimated with a simple binning-or-averaging procedure.
-But if there is not much data, you may need to fit a multinomial logistic regression model or use an empirical Bayes estimator of these probabilities. 
+But if there is not much data, you may need to fit a multinomial logistic regression model or use an multilevel model to estimate these probabilities. 
 
 
 ### Plackett-Luce Models
