--- a/website/slides/raw_slides/slides_13.qmd
+++ b/website/slides/raw_slides/slides_13.qmd
@@ -410,7 +410,17 @@ sum(results$SF1_Winner == "Wisconsin" &
 - Under alternative, WIS wins championship about 77% of the time (as opposed to 71% at neutral site)
 
 
-## Introducing Covariates
+## Introducing Covariates{.smaller}
+
+- What if we had team-level covariates?
+  - Offensive/defensive rating, record to date, other measures of strength
+
+- Possible to elaborate model: $\lambda_{j} = U_{j} + \boldsymbol{\mathbf{x}}_{j}^{\top}\beta$
+- Under elaborated model
+$$
+\log\left(\frac{\mathbb{P}(i \textrm{ beats } j)}{\mathbb{P}(j \textrm{ beats } i)}\right) = U_{i} - U_{j} + (\boldsymbol{\mathbf{x}}_{i} - \boldsymbol{\mathbf{x}}_{j})^{\top}\beta
+$$
+  - Depends on difference in observed covariates & latent team-specific random effect
 
 <!--
   Latent team strength could depend on sevefal factors:
