Fix a typo in 12

--- a/website/slides/raw_slides/slides_12.qmd
+++ b/website/slides/raw_slides/slides_12.qmd
@@ -360,7 +360,7 @@ simulated_ranks <-
 
 - Basic BT model: $\textrm{P}(i \textrm{ beats } j)$ depends only on **difference** $\lambda_{i} - \lambda_{j}$
 - Probabilities unchanged after constant shift. E.g.: $\lambda_{j} \rightarrow \lambda_{j} + 5$ for all $j$
-- Practically: we can only estiamte latent strengths **up to an additive constant**
+- Practically: we can only estimate latent strengths **up to an additive constant**
 - Often we fix one $\lambda_{j} = 0$ (a "reference team")
 
 # Fitting BT Models
